--- a/Cordeus/app/src/main/res/values/strings.xml
+++ b/Cordeus/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Cordeus</string>
+    <string name="app_name">CorDeus</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">Cadastre-se</string>
     <string name="title_activity_login">LoginActivity</string>
@@ -21,5 +21,6 @@
     <string name="err_short_code_promotional">O código promocional deve conter 6 caracteres</string>
     <string name="btn_to_buy">Comprar</string>
     <string name="btn_code">Usar código promocional</string>
+    <string name="title_activity_splash">SplashActivity</string>
 
 </resources>
