--- a/Cordeus/app/src/main/res/values/strings.xml
+++ b/Cordeus/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">CorDeus</string>
+    <string name="app_name">Cordel da Palavra</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">Cadastre-se</string>
     <string name="title_activity_login">LoginActivity</string>
