--- a/Cordeus/app/src/main/res/values/strings.xml
+++ b/Cordeus/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="err_short_password">A senha deve conter no mínimo 6 caracteres</string>
     <string name="err_short_code_promotional">O código promocional deve conter 6 caracteres</string>
     <string name="btn_to_buy">Comprar</string>
-    <string name="btn_code">Usar código promocional</string>
+    <string name="btn_code">Código promocional</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="developers">Desenvolvedores</string>
     <string name="designer">Designers</string>
